# WebApi_Rust

./: Cargo.toml  build.rs  config.toml
protos/: book.proto
src/: config.rs  constants.rs  lib.rs  main.rs  models.rs  redis_server.rs
src/routes/: handlers.rs  mod.rs
